--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,92 @@
+html,body,#root{
+    margin:0;
+    padding:0;
+    font-family:
+    sans-serif;
+    height:100%
+}
+
+.container{
+    color: black;
+    display:flex;
+    flex-direction:row;
+    align-items:flex-start;
+    height:100%;
+    width:100%;
+    margin:0;
+    padding: 0;
+}
+.login-form{display:flex;justify-content:center;flex-direction:column}
 .error {
     color: red;
 }
 
 .chatList {
     cursor: pointer;
+    width:100%;
+    height: 40px;
+    font-weight: bold;
+    vertical-align: text-bottom;
+}
+
+.chatList:hover {
+    background-color: #49c3f3;
+}
+
+.login-container {
+  
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    display: flex;
+}
+
+.menubar-container {
+    background-color: #3a9bc2;
+    height: 100%;
+    min-width: 150px;
+    margin:0;
+    text-align: center;
+    border: solid 1px black;
+}
+
+.messageForm-container {
+    margin: 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+.messageForm-form {
+    width:100%;
+}
+
+.message-container {
+    margin-left: 10px;
+    margin-right: 10px;
+    
+}
+
+.right {
+    text-align:right;justify-content:flex-end
+}
+
+.message-text{
+    border-radius:5px;
+    border-top-left-radius:0;
+    color: black;
+    padding:10px 15px;
+    display: inline-block;
+}
+
+.chat-container {
+    width:100%;
+    height:100%;
+    margin: 0;
+    background-color: #c7d2f1;
+}
+
+.message-author {
+    color: black;
+    font: italic;
 }
