--- a/src/app.css
+++ b/src/app.css
@@ -57,6 +57,15 @@ html,body,#root{
     width: 100%;
 }
 
+.isTyping-container {
+    position: absolute;
+    bottom: 38px;
+    margin-left: 10px;
+    color: midnightblue;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bold;
+}
+
 .messageForm-form {
     width:100%;
 }
@@ -64,7 +73,7 @@ html,body,#root{
 .message-container {
     margin-left: 10px;
     margin-right: 10px;
-    
+    position:relative;
 }
 
 .right {
