--- a/src/app.css
+++ b/src/app.css
@@ -54,7 +54,7 @@ html,body,#root{
     margin: 0;
     position: fixed;
     bottom: 0;
-    width: 100%;
+    width: 100%; 
 }
 
 .user-container {
@@ -99,6 +99,7 @@ html,body,#root{
     width:100%;
     height:100%;
     margin: 0;
+    padding-bottom: 35px;
     background-color: #c7d2f1;
     overflow-y:scroll;
 }
